[#1] 로그인 기능 개발 (#9)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,6 @@ spring:
 jwt:
   accessSecret: ${ACCESS_SECRET}
   refreshSecret: ${REFRESH_SECRET}
+  domain: ${COOKIE_DOMAIN}
+
+environment: ${ENVIRONMENT}
