[#27] 프로젝트 재시작 (#28)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,9 @@
 spring:
-#  mvc:
-#    throw-exception-if-no-handler-found: true // ??? ? ?? ???? ??? ??? ??
-#  web:
-#    resources:
-#      add-mappings: false // ?? ?? ?? ?? ???
   jpa:
     database-platform: org.hibernate.dialect.MySQL57Dialect
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
 
   datasource:
     url: jdbc:mysql://${DB_URL}/${DB_NAME}?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
